# vectron

./: .gitignore  CMakeLists.txt  PRD_VEKTOR_JUCE.md
docs/superpowers/plans/: 2026-06-25-vectron-phase-2-vector-engine.md  2026-06-25-vectron-synth.md  2026-07-22-vectron-phase-3-sub-noise.md  2026-07-23-vectron-phase-4-filter-drive.md  2026-07-23-vectron-phase-5-modulation.md  2026-07-23-vectron-phase-6-trajectory.md
docs/superpowers/specs/: 2026-07-22-vectron-phase-3-sub-noise-design.md  2026-07-22-vectron-phase-4-filter-drive-design.md  2026-07-23-vectron-phase-5-modulation-design.md  2026-07-23-vectron-phase-6-trajectory-design.md
source/: PluginProcessor.cpp  PluginProcessor.h
source/dsp/: VectronSound.h  VectronVoice.cpp  VectronVoice.h
source/dsp/drive/: DriveShaper.h
source/dsp/filter/: FilterMath.h  FilterStage.cpp  FilterStage.h  SvfCascade.h  SvfFilter.h
source/dsp/mod/: AdsrEnvelope.h  ModLfo.h  ModMatrix.h
source/dsp/noise/: NoiseGenerator.cpp  NoiseGenerator.h
source/dsp/osc/: PolyBlepOscillator.h  SubOscillator.h  VectorEngine.cpp  VectorEngine.h  VectorLfo.h  VectorTrajectory.h
source/params/: ParameterLayout.cpp  ParameterLayout.h  TrajectoryState.h
tests/: CMakeLists.txt  smoke_main.cpp  test_adsr_envelope.cpp  test_drive_shaper.cpp  test_filter_math.cpp  test_mod_lfo.cpp  test_mod_matrix.cpp  test_noise_generator.cpp  test_oscillator.cpp  test_sub_oscillator.cpp  test_svf_cascade.cpp  test_svf_filter.cpp  test_vector_engine.cpp  test_vector_lfo.cpp  test_vector_trajectory.cpp
